--- a/app/views/films/show.html.haml
+++ b/app/views/films/show.html.haml
@@ -35,5 +35,8 @@
           #characters.tab-pane.active
             = render 'characters'
           #planets.tab-pane.fade
+            = render 'planets'
           #vehicles.tab-pane.fade
+            = render 'vehicles'
           #species.tab-pane.fade
+            = render 'species'
