--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,4 +13,5 @@
   %body
     = render 'layouts/partials/header'
     %main.container
+      = render 'layouts/partials/notification'
       = yield
